got scss bundler working. all future styles go in sass folder and get imported into app.jsx

--- a/src/assets/public/index.html
+++ b/src/assets/public/index.html
@@ -5,24 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Links to reset, bootstrap, font-awesome and my custom css sheets. -->
-    <link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="./css/mystyles.css">
-    
-    <!-- Title displayed on tab. -->
+    <link rel="stylesheet" type="text/css" href="./bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="./allstyles.css">
+
     <title>Molecular Weight Calculator</title>
   </head>
 
   <body>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins)-->
-    <script src="./js/jquery-3.1.1.min.js"></script>
+    <script src="./bootstrap/jquery-3.1.1.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="./js/bootstrap.min.js"></script> 
+    <script src="./bootstrap/bootstrap.min.js"></script> 
 
     <!-- This is where React will deploy the contents it generates -->
     <div id="app"></div>
     <!-- All of our JS code will be transpiled into this bundle.js file -->
-    <script src="bundle.js"></script>
+    <script src="./bundle.js"></script>
   </body>
 
 </html>
