--- a/src/public/index.html
+++ b/src/public/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
     <link rel="stylesheet" type="text/css" href="./bootstrap/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="./allstyles.css">
@@ -19,6 +19,10 @@
 
     <!-- This is where React will deploy the contents it generates -->
     <div id="app"></div>
+
+    <script>
+      __REACT_DEVTOOLS_GLOBAL_HOOK__ = parent.__REACT_DEVTOOLS_GLOBAL_HOOK__
+    </script>
     <!-- All of our JS code will be transpiled into this bundle.js file -->
     <script src="./bundle.js"></script>
   </body>
