--- a/src/public/index.html
+++ b/src/public/index.html
@@ -12,6 +12,7 @@
   </head>
 
   <body>
+    <img src='./img/bg1.png'>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins)-->
     <script src="./bootstrap/jquery-3.1.1.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
